tests/ui/duplicate/dupe-symbols-7.stderr
error: entry symbol `main` declared multiple times
  --> $DIR/dupe-symbols-7.rs:9:1
   |
LL | fn main(){}
   | ^^^^^^^^^
   |
   = help: did you use `#[no_mangle]` on `fn main`? Use `#[start]` instead

error: aborting due to previous error

