tests/ui/duplicate/dupe-symbols-7.rs
// build-fail

//
// error-pattern: entry symbol `main` declared multiple times

#![allow(warnings)]

#[no_mangle]
fn main(){}
